Crash: Grease pencil noise modifier vertex group selection crashes Blender #74696

Closed
opened 2020-03-12 21:44:52 +01:00 by user1 · 7 comments

System Information
Operating system: Linux-5.3.0-40-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-12 00:33, hash: 8751af6d19
Worked: (optional)

Short description of error
Grease pencil noise modifier vertex group selection crashes Blender

Exact steps for others to reproduce the error
Bildschirmfoto zu 2020-03-12 21-36-04.png
Bildschirmfoto zu 2020-03-12 21-44-22.png

Open Blender 2D
Enter object mode
Add grease pencil Suzanne
Enter weight paint and paint some weights
Enter object mode
Call a noise modifier and try to select the vertex group that Blender proposes

**System Information** Operating system: Linux-5.3.0-40-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-12 00:33, hash: `8751af6d19` Worked: (optional) **Short description of error** Grease pencil noise modifier vertex group selection crashes Blender **Exact steps for others to reproduce the error** ![Bildschirmfoto zu 2020-03-12 21-36-04.png](https://archive.blender.org/developer/F8402784/Bildschirmfoto_zu_2020-03-12_21-36-04.png) ![Bildschirmfoto zu 2020-03-12 21-44-22.png](https://archive.blender.org/developer/F8402790/Bildschirmfoto_zu_2020-03-12_21-44-22.png) Open Blender 2D Enter object mode Add grease pencil Suzanne Enter weight paint and paint some weights Enter object mode Call a noise modifier and try to select the vertex group that Blender proposes
Author

Added subscriber: @user1

Added subscriber: @user1

Added subscriber: @ronsn

Added subscriber: @ronsn

I can confirm that. (System specs see at the bottom.)

I have tried two scenarios (with prepared blend files to test):

  1. only one circle (with weights) -> does not crash weights_crash1.blend
  2. another oval circle on top -> does crash weights_crash2.blend

System Information
Operating system: Linux-5.3.0-40-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59

Blender Version
Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-12 00:33, hash: 8751af6d19
Worked: (optional)

I can confirm that. (System specs see at the bottom.) I have tried two scenarios (with prepared blend files to test): 1. only one circle (with weights) -> does not crash [weights_crash1.blend](https://archive.blender.org/developer/F8402838/weights_crash1.blend) 2. another oval circle on top -> does crash [weights_crash2.blend](https://archive.blender.org/developer/F8402839/weights_crash2.blend) **System Information** Operating system: Linux-5.3.0-40-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59 **Blender Version** Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-12 00:33, hash: `8751af6d19` Worked: (optional)

gdb gave me this info:

0x00005555572250f9 in BKE_defvert_find_index ()```
gdb gave me this info: ```Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00005555572250f9 in BKE_defvert_find_index ()```

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2020-03-13 11:56:57 +01:00

This issue was referenced by 91ca3c3c0b

This issue was referenced by 91ca3c3c0b52a56865d3d704e4e9c6936e298610

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74696
No description provided.