Fix T74696: Segment fault in Noise modifier using Vertex Groups